updating the details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am A Softaware Developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>New Hyde Parkm, New York</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Some of my favorite bobbies include playing video games, listenbting to music and baking.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I actually do not know what I would want to do as a dream job and I am hoping that this Bootcamp will help me figure that out.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>New Hyde park New York</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Websites are used in billions of peoples every day lives, so I feel, understanding how webpages are developed is a good skill to have.</p>
     </section>
 
     <footer id="footer">
