updating the details...again

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am A Softaware Developer</p>
+      <p>I am an Electrical Engineer who wants to learn coding.</p>
       <h1>Where I'm From</h1>
-      <p>New Hyde Parkm, New York</p>
+      <p>My family is from India, I was born here in the States.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Some of my favorite bobbies include playing video games, listenbting to music and baking.</p>
+      <p>Some of my favorite hobbies include playing video games, listening to music and baking.</p>
       <h1>What's your dream job?</h1>
       <p>I actually do not know what I would want to do as a dream job and I am hoping that this Bootcamp will help me figure that out.</p>
       <h1>Where do you live?</h1>
-      <p>New Hyde park New York</p>
+      <p>New Hyde Park, New York</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Websites are used in billions of peoples every day lives, so I feel, understanding how webpages are developed is a good skill to have.</p>
+      <p>Websites are used in billions of peoples every day lives, so I feel understanding how webpages are developed is a good skill to have. From research i have also seen that the jobs that I can possibly get while being a Web Developer are jobs which pay handsomely.  </p>
     </section>
 
     <footer id="footer">
